* Simplify modules thanks to this.
* modules: Add support for loading from user's .local/libexec/speech-dispatcher.
* symbols: Process symbols.dic before emojis.dic.
* symbols: Enable speechd symbols processing by default.
* modules: Moved speech dispatcher modules to /usr/libexec/speech-dispatcher-modules
  (but keep compatibility with old /usr/lib/speech-dispatcher-modules path).
* ibmtts/voxin: Improve language selection.
* ibmtts/voxin: Add option to disable punctuation commands.
* ibmtts: Fix library load.
* ibmtts: Do not build by default on other systems than 32bit PC.
* mary: Add auto-detection.
* mary: Add newer voices.
* mary: Add volume, pitch, and rate support.
* ivona: Add auto-detection.
* festival: Strip head silence.
* generic: Add DefaultVoice option.
* es_ES: Add some gender neutral rules.
* Add SPEECHD_CMD environment variable.
* modules: Rewrite main functions with BSD licence, to let proprietary modules easily reuse this as a basis.
* modules: Add skeletons ready for use as a basis for new modules.
* Add script to run speechd from the build tree.
* Update CLDR to version 39, symbols from NVDA and orca.
* Add Esperanto translation.

Version 0.10.2
* generic: Add support for sound icons
* Add French, Norwegian Bokmål, Portuguese, Brazilian Portuguese, and Russian translations.
* Add voxin module variant.
* Factorize espeak module with espeak-ng module.
* Make ibmtts and voxin use the common queue helpers.
* Fix python bindings against python 3.9.
* Reference the golang bindings.
* Add spd_get_client_id.
* Make key, char and sound_icon commands return message id.
* Expose modulebindir in speech-dispatcher.pc.
* Remove generic modules for synths that have a non-generic module.

Version 0.10
* Add punctuation level "most".
* Rework thread synchronization.
* Move espeak/espeak-ng audio queuing to shared file, rework it.
* Make baratinoo use this audio queueing, enable marks, and support
responsiveness parameter.
* Add support for Baratinoo engine 8.6